--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@grpc/grpc-js": "^1.9.9",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/microservices": "^10.2.8",
+    "@nestjs/microservices": "^10.2.10",
     "@nestjs/platform-express": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "kafkajs": "^2.2.4",
     "nodemailer": "^6.9.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
