--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.9.9",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.2.10",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.6.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "handlebars": "^4.7.8",
     "kafkajs": "^2.2.4",
     "nodemailer": "^6.9.7",
     "reflect-metadata": "^0.1.13",
@@ -38,7 +41,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.9.4",
     "@types/nodemailer": "^6.4.13",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
